--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.swp
-report/*.pdf
-report/*.aux
-report/*.log
-report/*.synctex.gz
+report*/*.pdf
+report*/*.aux
+report*/*.log
+report*/*.synctex.gz
